--- a/search/index.html
+++ b/search/index.html
@@ -1,6 +1,7 @@
 ---
 layout: post-index
-title: Search
+title:  "&lt;Simple.Matter.of.Coding/&gt;"
+description: "Search this site..."
 comments: false
 ---
 
