--- a/search/index.html
+++ b/search/index.html
@@ -1,7 +1,7 @@
 ---
 layout: post-index
 title:  "&lt;Simple.Matter.of.Coding/&gt;"
-description: "Search this site..."
+subtitle: "Search this site"
 comments: false
 ---
 
